--- a/server/index.html
+++ b/server/index.html
@@ -18,9 +18,11 @@
 </head>
 
 <body>
-    
-    <video id="vidStream" autoplay playsinline muted>
-    </video>
-    
+    <div id="container">
+        <div id="draggable"> 
+            <video id="vidStream" autoplay playsinline muted>
+            </video>
+        </div>
+    </div>
     <!-- <video id="test" playsinline autoplay></video> -->
 </body>
