client show connection status

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -22,6 +22,9 @@
         <div id="draggable"> 
             <video id="vidStream" autoplay playsinline muted>
             </video>
+            <div id="connectionStatus">
+                
+            </div>
         </div>
     </div>
     <!-- <video id="test" playsinline autoplay></video> -->
